use prod macro custom attrs to impl rundo

--- a/macros/literals/Cargo.toml
+++ b/macros/literals/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "rundo-derive"
+name = "literals"
 version = "0.1.0"
 authors = ["Adoo <Adoo@outlook.com>"]
 
 [dependencies]
-types = {path = "../types"}
 syn = "*"
 quote = "*"
 
