--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Adoo <Adoo@outlook.com>"]
 
 [dependencies]
-rundo-derive = { path="rundo-derive" }
+attrs = { path="attrs" }
 types = { path="types" }
 
 [workspace]
