--- a/macros/attrs/Cargo.toml
+++ b/macros/attrs/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Adoo <Adoo@outlook.com>"]
 
 [dependencies]
 types = {path = "../../types"}
-syn = "*"
+syn = { version ="*", features = ["full"]}
 quote = "*"
 
 [lib]
