--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ script:
 before_deploy:
   - cargo doc
   - cargo login $CARGO_TOKEN
+  - cd $TRAVIS_BUILD_DIR
+  - chmod +x ./scripts/deploy.sh
 deploy:
   provider: script
-  script: scripts/deploy.sh
+  script: ./cripts/deploy.sh
 
   skip_cleanup: true
   on:
