--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ matrix:
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
+after_success: |
+  sudo apt-get install libcurl4-openssl-dev libelf-dev libdw-dev &&
+  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+  tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make &&
+  sudo make install && cd ../.. &&
+  kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/rundo-*
 before_deploy:
   - cargo doc
   - cargo login $CARGO_TOKEN
@@ -18,6 +24,6 @@ before_deploy:
 deploy:
   provider: script
   script: ./scripts/deploy.sh
-  skip_cleanup: true
+  skip_cleanup: trues
   on:
     tags: true
