--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ after_success: |
   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
   tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make &&
   sudo make install && cd ../.. &&
-  kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/rundo-*
+  kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/rundo-* &&
+  rm -r kcov-master && rm master.tar.gz
+
 before_deploy:
   - cargo doc
   - cargo login $CARGO_TOKEN
